[tool.poetry]
name = "gqlite"
version = "0.4.0"
description = "Lightweight client for GraphQL in Python"
authors = ["Seto Balian <seto.balian@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
isort = "^5.12.0"
black = "^23.7.0"
mypy = "^1.5.1"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
follow_imports = "silent"
check_untyped_defs = true
enable_error_code = ["ignore-without-code"]
show_error_codes = true
warn_unused_ignores = true
exclude = [
    "__pycache__",
    ".git",
    ".venv",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
